--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@types/json5": "^2.2.0",
+    "animejs": "^3.2.1",
     "json5": "^2.2.0",
     "lit": "^2.0.0-rc.2",
     "stylus": "^0.54.8",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.3",
     "vite": "^2.3.3"
   }
 }
